# LCA-KPConv

./: .gitignore  README.md  lca_kpconv_build.py  pyproject.toml
cpp_wrappers/: compile_wrappers.sh
cpp_wrappers/cpp_neighbors/: setup.py  wrapper.cpp
cpp_wrappers/cpp_subsampling/: setup.py  wrapper.cpp
cpp_wrappers/cpp_subsampling/grid_subsampling/: grid_subsampling.cpp
cpp_wrappers/cpp_utils/: numpy_compat.h
datasets/: STPLS3D.py  common.py
tests/: test_degenerate_neighbors.py
utils/: metrics.py
